# api-pipeline-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: aggregator.py  eventProcessor.py  utilities.py  utilitiesDataframe.py  writer.py
data/mongodb_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1665294666003714483.wt  collection-2-1665294666003714483.wt  collection-4-1665294666003714483.wt  index-1-1665294666003714483.wt  index-3-1665294666003714483.wt  index-5-1665294666003714483.wt  index-6-1665294666003714483.wt  sizeStorer.wt
data/mongodb_data/diagnostic.data/: metrics.2024-12-04T04-08-20Z-00000  metrics.2024-12-04T04-33-05Z-00000  metrics.2024-12-04T04-45-23Z-00000  metrics.2024-12-04T04-46-43Z-00000  metrics.2024-12-04T05-11-35Z-00000  metrics.2024-12-04T05-16-23Z-00000  metrics.2024-12-04T13-17-58Z-00000  metrics.interim
