[tool.poetry]
name = "app-fastapi"
version = "0.1.0"
description = ""
authors = ["Ruda <filiperuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.3"
websockets = "^14.1"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
pyspark = "^3.5.3"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
